data/derived/comb/progs/unify/prog4629.ml.out
Characters 72-74:
  | Sine e -> pi*x
              ^^
Error: This expression has type float but an expression was expected of type
         int
